<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_raffle"
        android:icon="@drawable/ic_stars_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/raffle_participant"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/abc_searchview_description_search"/>

    <item
        android:id="@+id/menu_resume"
        android:icon="@drawable/ic_list_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/resume_event"/>

    <item
        android:id="@+id/menu_send"
        android:title="@string/send"
        android:icon="@drawable/ic_mail_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"/>


    <item
        android:id="@+id/menu_discart"
        android:title="@string/discard_records"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete_participant"
        app:showAsAction="never" />
</menu>
