<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBarLayout_layout_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardView_layout_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/infor_participant"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/txtName_textSize"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/linear_layout_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgEmail"
                            android:contentDescription="@string/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_email_grey600_24dp"
                            android:gravity="center|center_vertical" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/linear_layout_marginLeft"
                            android:layout_marginStart="@dimen/linear_layout_marginStart"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/email" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/linear_layout_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgPhone"
                            android:contentDescription="@string/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_phone_grey600_24dp"
                            android:gravity="center|center_vertical" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/linear_layout_marginLeft"
                            android:layout_marginStart="@dimen/linear_layout_marginStart"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtPhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/phone" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/linear_layout_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgShirtSize"
                            android:contentDescription="@string/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_accessibility_grey600_24dp"
                            android:gravity="center|center_vertical" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/linear_layout_marginLeft"
                            android:layout_marginStart="@dimen/linear_layout_marginStart"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtShirtSize"
                                android:layout_width="@dimen/txtShirtSize_layout_width"
                                android:layout_height="@dimen/txtShirtSize_layout_height"
                                android:layout_marginEnd="5dp"
                                android:layout_marginRight="5dp"
                                android:background="@drawable/shape_shirt_size"
                                android:gravity="center|center_vertical"
                                android:text="@string/shirt_size_p"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/txtShirtSize_textSize" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/linear_layout_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgAttend"
                            android:contentDescription="@string/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_event_grey600_24dp"
                            android:gravity="center|center_vertical" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/linear_layout_marginLeft"
                            android:layout_marginStart="@dimen/linear_layout_marginStart"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtAttend"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/not_attended_event" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardView_layout_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/linear_layout_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_email_grey600_24dp"
                            android:drawableStart="@drawable/ic_email_grey600_24dp"
                            android:gravity="center|center_vertical" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/linear_layout_marginLeft"
                            android:layout_marginStart="@dimen/linear_layout_marginStart"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="rudsonlive@gmail.com" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/linear_layout_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_phone_grey600_24dp"
                            android:drawableStart="@drawable/ic_phone_grey600_24dp"
                            android:gravity="center|center_vertical" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/linear_layout_marginLeft"
                            android:layout_marginStart="@dimen/linear_layout_marginStart"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="(85)98705-0560" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/linear_layout_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_accessibility_grey600_24dp"
                            android:drawableStart="@drawable/ic_accessibility_grey600_24dp"
                            android:gravity="center|center_vertical" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/linear_layout_marginLeft"
                            android:layout_marginStart="@dimen/linear_layout_marginStart"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="@dimen/txtShirtSize_layout_width"
                                android:layout_height="@dimen/txtShirtSize_layout_height"
                                android:layout_marginEnd="5dp"
                                android:layout_marginRight="5dp"
                                android:background="@drawable/shape_shirt_size"
                                android:gravity="center|center_vertical"
                                android:text="@string/shirt_size_p"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/txtShirtSize_textSize" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/linear_layout_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_event_grey600_24dp"
                            android:drawableStart="@drawable/ic_event_grey600_24dp"
                            android:gravity="center|center_vertical" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/linear_layout_marginLeft"
                            android:layout_marginStart="@dimen/linear_layout_marginStart"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_check_green_18dp"
                                android:drawableStart="@drawable/ic_check_green_18dp"
                                android:text="Confirmou presença no evento" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/floating_layout_margin"
        android:clickable="true"
        android:src="@drawable/ic_edit_white_24dp"
        app:borderWidth="0dp"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>